@@ -1,3 +1,5 @@
+* Reduce recursion in the element cloner() function and make getScripts() absorb getByTagName(). [jddalton]
+
 * Optimize NodeList modification methods by creating an element/fragment once instead of for each iteration. [jddalton]
 
 * Add fuse.dom.HTMLElement and move HTML related methods from fuse.dom.Element to HTMLElement. [jddalton]
